# Trading-Bot

bot/: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  main.cpp
bot/.cache/clangd/index/: main.cpp.1E63D01FF436107F.idx
bot/config/: config.yaml
bot/input/: 1666310400000.csv
bot/src/: main.cpp
bot/src/account/: Account.cpp  Account.h
bot/src/algorithm/: Action.h  Algorithm.cpp  Algorithm.h  Factory.cpp  Factory.h  SimpleAlgorithm.cpp  SimpleAlgorithm.h  Status.h
bot/src/config/: Config.h  Worker.h
bot/src/config/account/: Account.cpp  Account.h  Type.h
bot/src/config/algorithm/: Algorithm.cpp  Algorithm.h  Factory.cpp  Factory.h  SimpleAlgorithm.cpp  SimpleAlgorithm.h  Type.h
bot/src/config/output/: APICaller.h  CombinedOutput.h  FileWriter.h
bot/src/config/reader/: Factory.cpp  Factory.h  FileReader.cpp  FileReader.h  Reader.cpp  Reader.h  Type.h
bot/src/datareader/: DataReader.h  FileReader.h
bot/src/entity/: Action.h  BalanceInfo.h  Kline.h
bot/src/maker/: APIWriter.h  Logger.h  Maker.h
bot/src/reader/: Factory.cpp  Factory.h  FileReader.cpp  FileReader.h  Reader.h
bot/src/reader/schema/: Binance.cpp  Binance.h  Schema.h
bot/src/repo/: FileRepo.cpp  FileRepo.h
bot/src/util/: File.cpp  File.h  ReaderSchema.cpp  ReaderSchema.h  String.cpp  String.h
bot/src/worker/: Woker.cpp  Worker.cpp  Worker.h
postman/: credentials.yaml
